# plugin_cpp

./: .env.example  .gitignore  README.md  docker-compose.yml
.docker/images/linux_gcc/: Dockerfile  docker-autobash-entrypoint.sh
project/: autobash.sh  comp.sh
project/pctrplugin/: CMakeLists.txt  PctrPlugin.cpp  PctrPlugin.hpp
project/plugin-src/: Makefile  main.cpp  main.hpp  test1.cpp  test2.cpp  test3.cpp
project/plugin/main/: AddPluginInterface.hpp  CMakeLists.txt  Main_plugin.cpp  Main_plugin.hpp
project/plugin_test2/: CMakeLists.txt  autobash.sh  comp.sh
project/plugin_test2/include/: Add_Plugin.hpp
project/plugin_test2/plugins/: CMakeLists.txt
project/plugin_test2/plugins/plugin1/: CMakeLists.txt  Plugin1.cpp  Plugin1.hpp  main.cpp
project/plugin_test2/static/: Add_Plugin.hpp  Add_plugin.cpp  CMakeLists.txt  Main_plugin.cpp
project/plugin_test2/testplugin/: CMakeLists.txt  main.cpp
project/plugins/: comp.sh
project/plugins/plugin1/: CMakeLists.txt  Plugin1.cpp  Plugin1.hpp
project/plugins/plugin2/: CMakeLists.txt  Plugin2.cpp  Plugin2.hpp  comp.sh
project/plugins/plugin3/: CMakeLists.txt  Plugin3.cpp  Plugin3.hpp
project/static/: Add_Plugin.hpp  CMakeLists.txt  Main_plugin.cpp  Main_plugin.hpp
project/test021/: CMakeLists.txt  circle.cpp  circle.hpp  main.cpp
project/test027/: Add_Plugin.hpp  Add_plugin.cpp  CMakeLists.txt  Plugin1.cpp  Plugin1.hpp  main.cpp
project/test_heritage/: CMakeLists.txt  main.cpp
project/testplugin/: AddPluginInterface.hpp  CMakeLists.txt  main.cpp
